# estimating-fog-parameters

./: CMakeLists.txt  LICENSE  README.md
Examples/Stereo/: SDIRF.yaml  VKITTI2.yaml  stereo_sdirf.cc  stereo_vkitti2.cc
include/: FogEstimation.h  Frame.h  KeyFrame.h  LocalMapping.h  MapPoint.h  MyLog.h  ORBextractor.h  Optimizer.h  PatchAligner.h  SingleImageDehazerAbstract.h  SingleImageDehazerChiang.h  SingleImageDehazerHe.h  SingleImageDehazerTan.h  System.h  Tracking.h
src/: FogEstimation.cc  Frame.cc  KeyFrame.cc  LocalMapping.cc  MapPoint.cc  MyLog.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PatchAligner.cc  SingleImageDehazerAbstract.cc  SingleImageDehazerChiang.cc  SingleImageDehazerHe.cc  SingleImageDehazerTan.cc  System.cc  Tracking.cc
visualisation/: plot_beta_vs_frame_sdirf.py  plot_beta_vs_frame_vkitti2.py
